--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=ChangGE
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://liuyin.fun
 
 LOG_CHANNEL=stack
 
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.qq.com
+MAIL_PORT=25
+MAIL_USERNAME=1304609091@qq.com
+MAIL_PASSWORD=mfjlgwcwmhktfiaj
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=1304609091@qq.com
+MAIL_FROM_NAME=ChangGE
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
